# remote-image-receiver

./: CMakeLists.txt  Readme.md
config/: config.json  message.proto
proto/: CMakeLists.txt  message.proto
src/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.h  FrameSaver.cpp  FrameSaver.h  FrameStreamer.cpp  FrameStreamer.h  MessageStorage.cpp  MessageStorage.h  ReceiverService.cpp  ReceiverService.h  ZmqProxy.cpp  ZmqProxy.h  main.cpp
tests/: AnalyzerTests.cpp  AnalyzerTests.h  CMakeLists.txt  ConfigurationReaderTests.cpp  ConfigurationReaderTests.h  FrameStreamerTests.cpp  FrameStreamerTests.h  MessageStorageTests.cpp  MessageStorageTests.h  ZmqProxyTests.cpp  ZmqProxyTests.h  main.cpp
tests_data/: config.json
